# agent-sandbox

./: .gitignore  LICENSE  README.md  launch.sh
config/example/: CLAUDE.md  http_policy.yaml  mcp_policy.yaml
config/test-atlassian/: mcp_policy.yaml
container/: Dockerfile  entrypoint.sh  init-firewall.sh  mcp-relay.py
http_proxy/: addon.py  credentials.py  providers.py  pyproject.toml
http_proxy/shared/: __init__.py  approval.py  audit.py  policy.py  vault.py
http_proxy/tests/: test_approval.py  test_audit.py  test_credentials.py  test_policy.py  test_providers.py  test_safe_body.py  test_vault.py
mcp_gateway/: package-lock.json  package.json
mcp_gateway/src/: approval.ts  audit.ts  config.ts  gateway.ts  index.ts  oauth.ts  policy.ts  upstream.ts
